--- a/Cheese Cubed Compiler.vcxproj.filters
+++ b/Cheese Cubed Compiler.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="scan.c">
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="testCheeseFile.txt" />
+    <Text Include="baseTest.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="data.h">
