Reorganized file structure

--- a/Cheese Cubed Compiler.vcxproj
+++ b/Cheese Cubed Compiler.vcxproj
@@ -131,8 +131,8 @@
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="baseTest.txt" />
-    <Text Include="testCheeseFile.txt" />
+    <Text Include="debuggingFiles\baseTest.txt" />
+    <Text Include="debuggingFiles\testCheeseFile.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="data.h" />
